{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 34,
  "lineage": "c8ff07da-10f2-a37b-9aa7-117acd6c3426",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wutang-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039fdd599849d9761",
            "arn": "arn:aws:ec2:eu-west-3:715928764535:elastic-ip/eipalloc-039fdd599849d9761",
            "domain": "vpc",
            "id": "eipalloc-039fdd599849d9761",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-212-18.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.212.18",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags": {
              "Name": "wutang-nat-eip"
            },
            "tags_all": {
              "Name": "wutang-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wutang-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09968b16214ef62ce",
            "arn": "arn:aws:ec2:eu-west-3:715928764535:instance/i-00c6bea91763e6737",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c6bea91763e6737",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-054ac31921b97dc77"
              }
            ],
            "primary_network_interface_id": "eni-054ac31921b97dc77",
            "private_dns": "ip-10-109-1-246.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.109.1.246",
            "public_dns": "ec2-15-237-117-189.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.117.189",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0337fb07c8a39a425",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ef4cc0b8326c92b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcc682a891990d37",
            "tags": {
              "Name": "wutang-ec2"
            },
            "tags_all": {
              "Name": "wutang-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef4cc0b8326c92b4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "i-00c6bea91763e6737",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:internet-gateway/igw-0c22135d5af30819c",
            "id": "igw-0c22135d5af30819c",
            "owner_id": "715928764535",
            "region": "eu-west-3",
            "tags": {
              "Name": "igw",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "igw",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wutang_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:loadbalancer/app/wutang-load-balancer/9389b06e61e0a618",
            "arn_suffix": "app/wutang-load-balancer/9389b06e61e0a618",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wutang-load-balancer-231644918.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:loadbalancer/app/wutang-load-balancer/9389b06e61e0a618",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wutang-load-balancer",
            "preserve_host_header": false,
            "region": "eu-west-3",
            "security_groups": [
              "sg-069aacd3d03b711a0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03df4c55f79cb0768"
              },
              {
                "subnet_id": "subnet-0ae1ccfede1404040"
              },
              {
                "subnet_id": "subnet-0fcc682a891990d37"
              }
            ],
            "subnets": [
              "subnet-03df4c55f79cb0768",
              "subnet-0ae1ccfede1404040",
              "subnet-0fcc682a891990d37"
            ],
            "tags": {
              "Name": "wutangLoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "wutang"
            },
            "tags_all": {
              "Name": "wutangLoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "wutang"
            },
            "vpc_id": "vpc-0ea83b786b3d30508",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:loadbalancer/app/wutang-load-balancer/9389b06e61e0a618"
          },
          "dependencies": [
            "aws_security_group.wutang-sg-lb",
            "aws_subnet.public-eu-west-3a",
            "aws_subnet.public-eu-west-3b",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:listener/app/wutang-load-balancer/9389b06e61e0a618/69eb2ccd8a370202",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:targetgroup/wutang-target-group/c3467a5d9471b4f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:listener/app/wutang-load-balancer/9389b06e61e0a618/69eb2ccd8a370202",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:loadbalancer/app/wutang-load-balancer/9389b06e61e0a618",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:listener/app/wutang-load-balancer/9389b06e61e0a618/69eb2ccd8a370202"
          },
          "dependencies": [
            "aws_lb.wutang_alb",
            "aws_lb_target_group.wutang-tg",
            "aws_security_group.wutang-sg-lb",
            "aws_subnet.public-eu-west-3a",
            "aws_subnet.public-eu-west-3b",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wutang-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:targetgroup/wutang-target-group/c3467a5d9471b4f1",
            "arn_suffix": "targetgroup/wutang-target-group/c3467a5d9471b4f1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:targetgroup/wutang-target-group/c3467a5d9471b4f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wutang-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wutangTargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "wutang"
            },
            "tags_all": {
              "Name": "wutangTargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "wutang"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:715928764535:targetgroup/wutang-target-group/c3467a5d9471b4f1"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wutang-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039fdd599849d9761",
            "association_id": "eipassoc-0ed9ee3fc91434976",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b85390a43e18d224",
            "network_interface_id": "eni-0939435cb7b14cd23",
            "private_ip": "10.109.1.200",
            "public_ip": "13.36.212.18",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fcc682a891990d37",
            "tags": {
              "Name": "wutang-nat-gateway"
            },
            "tags_all": {
              "Name": "wutang-nat-gateway"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.wutang-nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:route-table/rtb-0040c238377ef8221",
            "id": "rtb-0040c238377ef8221",
            "owner_id": "715928764535",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b85390a43e18d224",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wutang-private-rt"
            },
            "tags_all": {
              "Name": "wutang-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "rtb-0040c238377ef8221",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_eip.wutang-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.wutang-nat-gateway",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:route-table/rtb-062a84ed274668fa3",
            "id": "rtb-062a84ed274668fa3",
            "owner_id": "715928764535",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c22135d5af30819c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wutang-public-rt"
            },
            "tags_all": {
              "Name": "wutang-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "rtb-062a84ed274668fa3",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0067a73e62dbdbb01",
            "region": "eu-west-3",
            "route_table_id": "rtb-0040c238377ef8221",
            "subnet_id": "subnet-0b7ddecd8717649e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.wutang-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.wutang-nat-gateway",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3a",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc14c7a355db270",
            "region": "eu-west-3",
            "route_table_id": "rtb-0040c238377ef8221",
            "subnet_id": "subnet-0e052d5e2377c9488"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.wutang-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.wutang-nat-gateway",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3b",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077c12e54fe1368cf",
            "region": "eu-west-3",
            "route_table_id": "rtb-0040c238377ef8221",
            "subnet_id": "subnet-0a3b5b91a4298a81b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.wutang-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.wutang-nat-gateway",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3c",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef9ac5d96805d4d1",
            "region": "eu-west-3",
            "route_table_id": "rtb-062a84ed274668fa3",
            "subnet_id": "subnet-0fcc682a891990d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00883c51d02b4bb83",
            "region": "eu-west-3",
            "route_table_id": "rtb-062a84ed274668fa3",
            "subnet_id": "subnet-0ae1ccfede1404040"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3b",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e7f89511c5029bb",
            "region": "eu-west-3",
            "route_table_id": "rtb-062a84ed274668fa3",
            "subnet_id": "subnet-03df4c55f79cb0768"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wutang-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group/sg-0ef4cc0b8326c92b4",
            "description": "Allow inbound traffic and all outbound traffic to the 36th chamber",
            "egress": [],
            "id": "sg-0ef4cc0b8326c92b4",
            "ingress": [],
            "name": "wutang-sg",
            "name_prefix": "",
            "owner_id": "715928764535",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wutang-sg"
            },
            "tags_all": {
              "Name": "wutang-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sg-0ef4cc0b8326c92b4",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wutang-sg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group/sg-069aacd3d03b711a0",
            "description": "Allow inbound traffic and all outbound traffic to the 36th chamber",
            "egress": [],
            "id": "sg-069aacd3d03b711a0",
            "ingress": [],
            "name": "wutang-sg-lb",
            "name_prefix": "",
            "owner_id": "715928764535",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wutang-sg-lb"
            },
            "tags_all": {
              "Name": "wutang-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sg-069aacd3d03b711a0",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-0b7ddecd8717649e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.109.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7ddecd8717649e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-0b7ddecd8717649e9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-0e052d5e2377c9488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.109.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e052d5e2377c9488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-0e052d5e2377c9488",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-0a3b5b91a4298a81b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.109.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b5b91a4298a81b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-0a3b5b91a4298a81b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-0fcc682a891990d37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.109.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc682a891990d37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-0fcc682a891990d37",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-0ae1ccfede1404040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.109.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae1ccfede1404040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-0ae1ccfede1404040",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:subnet/subnet-03df4c55f79cb0768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.109.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03df4c55f79cb0768",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715928764535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ea83b786b3d30508"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "subnet-03df4c55f79cb0768",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wutang-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:vpc/vpc-0ea83b786b3d30508",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.109.0.0/16",
            "default_network_acl_id": "acl-02d8b1ca3c062ea97",
            "default_route_table_id": "rtb-0ca15711b24ac25cf",
            "default_security_group_id": "sg-05c41df2a435194a8",
            "dhcp_options_id": "dopt-0f0e5c46d560d7ccd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea83b786b3d30508",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca15711b24ac25cf",
            "owner_id": "715928764535",
            "region": "eu-west-3",
            "tags": {
              "Name": "wutang-vpc",
              "Owner": "Chewcacca",
              "Planet": "Mustafar",
              "Service": "vpc"
            },
            "tags_all": {
              "Name": "wutang-vpc",
              "Owner": "Chewcacca",
              "Planet": "Mustafar",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "vpc-0ea83b786b3d30508",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wutang-sg-egress-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group-rule/sgr-05fea725f60fe33a5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05fea725f60fe33a5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0ef4cc0b8326c92b4",
            "security_group_rule_id": "sgr-05fea725f60fe33a5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sgr-05fea725f60fe33a5",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wutang-sg-lb-egress-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group-rule/sgr-0792f18cc8e247010",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0792f18cc8e247010",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-069aacd3d03b711a0",
            "security_group_rule_id": "sgr-0792f18cc8e247010",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sgr-0792f18cc8e247010",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg-lb",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wutang-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group-rule/sgr-01f5a0fadf0b13633",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-01f5a0fadf0b13633",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0ef4cc0b8326c92b4",
            "security_group_rule_id": "sgr-01f5a0fadf0b13633",
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "Name": "HTTP"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sgr-01f5a0fadf0b13633",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wutang-sg-lb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group-rule/sgr-08f5e60e8d773a433",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-08f5e60e8d773a433",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-069aacd3d03b711a0",
            "security_group_rule_id": "sgr-08f5e60e8d773a433",
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "Name": "HTTP"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sgr-08f5e60e8d773a433",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg-lb",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wutang-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:715928764535:security-group-rule/sgr-09d7644cba5741539",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgr-09d7644cba5741539",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0ef4cc0b8326c92b4",
            "security_group_rule_id": "sgr-09d7644cba5741539",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715928764535",
            "id": "sgr-09d7644cba5741539",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.wutang-sg",
            "aws_vpc.wutang-vpc"
          ]
        }
      ]
    }
  ]
}